// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package audit.pb;
import "api/status.proto";
import "google/protobuf/timestamp.proto";

option go_package = "proto-gen/audit";

message AuditHeader {
  google.protobuf.Timestamp time = 1;
  scql.pb.Status status = 2;

  EventName event_name = 3;
  string session_id = 4;
}

enum EventName {
  // common
  UNCATEGORIZED = 0;

  // SCDB
  RUN_SYNC_QUERY = 1;
  RUN_ASYNC_QUERY = 2;
  ASYNC_COMPLETE = 3;
  SESSION_PARAMS = 4;
  FETCH_RESULT = 5;

  PLAN_DETAIL = 6;
  DAG_DETAIL = 7;
  CCL_DETAIL = 8;

  // ENGINE
  RUN_SUB_DAG = 9;
  RUN_EXEC_PLAN = 10;

  CREATE_SESSION = 11;
  STOP_JOB = 12;

  JOIN_DETAIL = 13;
  IN_DETAIL = 14;
  SQL_DETAIL = 15;
  DUMP_FILE_DETAIL = 16;
  PUBLISH_DETAIL = 17;
}

message UncategorizedEvent {
  string url_path = 1;
  string source_ip = 2;
}

message NodeInfo {
  string name = 1;
  map<string, strings> inputs = 2;
  map<string, strings> outputs = 3;
}

message strings {
  repeated string ss = 1;
}